# airport_inspector

./: .gitignore  CMakeLists.txt  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  statisticsdialog.cpp  statisticsdialog.h  statisticsdialog.ui  style.qss
